DOM: Fix "" handling in Node.lookupNamespaceURI().

"" should be handled as null.
https://dom.spec.whatwg.org/#dom-node-lookupnamespaceuri

New behavior matches to Firefox, Edge, and the latest DOM standard.

This CL fixes four tests in wpt, and removes two obsolete DOM conformance tests
which this CL breaks.

BUG=699449

Review-Url: https://codereview.chromium.org/2739843002
Cr-Commit-Position: refs/heads/master@{#455490}

Former-commit-id: 3803c1269c408f40f27582052656e22d83d1332d